# RRFI

./: README.md  README.txt
RRS_Receiver/: CMakeLists.txt  ETSI_RRS_RRFI.cpp  ETSI_RRS_RRFITests.cpp  ETSI_RRS_TxRxChainControlServices.h
RRS_Transmitter/: CMakeLists.txt  Configuration.cfg  ETSI_RRS_RRFI.h  ETSI_RRS_RRFITests.cpp  ETSI_RRS_TxRxChainControlServices.cpp  ETSI_RRS_USRP_Device.cpp
TestObject2/: CMakeLists.txt  Test_signal.txt  consts.h  main.cpp  times.cpp  times.h
URA/: CMakeLists.txt  Configuration.cfg  DATA.txt  URA.cpp  times.cpp  times.h
URA/DopplerChannel/: DopplerChannel.h  GeneralUtils.h  RNG.h
